*compilation*~
-*- mode: compilation; default-directory: "~/mimicrypt/" -*-
Compilation started at Mon Jul 11 08:52:28

gcc mimicrypt.c
mimicrypt.c: In function ‘main’:
mimicrypt.c:36:20: error: expected expression before ‘FILE’
   36 |       d_text=fopen(FILE *auxf,"a");
      |                    ^~~~
mimicrypt.c:36:14: error: too few arguments to function ‘fopen’
   36 |       d_text=fopen(FILE *auxf,"a");
      |              ^~~~~
In file included from mimicrypt.c:3:
/usr/include/stdio.h:246:14: note: declared here
  246 | extern FILE *fopen (const char *__restrict __filename,
      |              ^~~~~
mimicrypt.c:45:17: error: too many arguments to function ‘rand_num’
   45 |             res=rand_num(date,d_text);
      |                 ^~~~~~~~
mimicrypt.c:16:5: note: declared here
   16 | int rand_num(time_t x_n);
      |     ^~~~~~~~
mimicrypt.c: In function ‘rand_num’:
mimicrypt.c:74:40: error: expected expression before ‘data_e’
   74 |             return_number_of_the_list(&data_e,cont);
      |                                        ^~~~~~
mimicrypt.c:74:13: error: too few arguments to function ‘return_number_of_the_list’
   74 |             return_number_of_the_list(&data_e,cont);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from mimicrypt.c:7:
list_num_used.h:59:5: note: declared here
   59 | int return_number_of_the_list(lnum **data1,int pstn){
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
mimicrypt.c:77:60: error: request for member ‘num’ in something not a structure or union
   77 |             if((result<=255)&&(result>-1)&&(result!=data_e1.num)){
      |                                                            ^
mimicrypt.c:92:31: error: request for member ‘num’ in something not a structure or union
   92 |             if(result==data_e1.num){
      |                               ^
mimicrypt.c: In function ‘encrypt_operation’:
mimicrypt.c:109:14: warning: passing argument 1 of ‘fscanf’ from incompatible pointer type [-Wincompatible-pointer-types]
  109 |       fscanf(archive_inp,"%c",&aux);
      |              ^~~~~~~~~~~
      |              |
      |              FILE **
In file included from mimicrypt.c:3:
/usr/include/stdio.h:391:37: note: expected ‘FILE * restrict’ but argument is of type ‘FILE **’
  391 | extern int fscanf (FILE *__restrict __stream,
      |                    ~~~~~~~~~~~~~~~~~^~~~~~~~
mimicrypt.c:128:15: warning: passing argument 1 of ‘fprintf’ from incompatible pointer type [-Wincompatible-pointer-types]
  128 |       fprintf(archive_otp,"%c",aux2);
      |               ^~~~~~~~~~~
      |               |
      |               FILE **
In file included from mimicrypt.c:3:
/usr/include/stdio.h:326:38: note: expected ‘FILE * restrict’ but argument is of type ‘FILE **’
  326 | extern int fprintf (FILE *__restrict __stream,
      |                     ~~~~~~~~~~~~~~~~~^~~~~~~~

Compilation exited abnormally with code 1 at Mon Jul 11 08:52:28
